# click

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/paddleocr/: PaddleLiteSymbols.cc  PaddleOcrLoader.cc  PaddleOcrNative.cc  cls_process.cc  det_process.cc  pipeline.cc  pipeline.h  rec_process.cc  utils.h
app/src/main/res/drawable/: floating_control_bg.xml  floating_input_bg.xml  floating_panel_bg.xml  floating_pill_danger.xml  floating_pill_primary.xml  floating_pill_secondary.xml  floating_pill_success.xml  floating_pill_warning.xml  ic_dropdown_arrow.xml  ic_launcher_background.xml  main_card_bg.xml  main_permission_action_bg.xml  main_permission_done_bg.xml  picker_action_bar_bg.xml  picker_action_cancel_bg.xml  picker_action_save_bg.xml  pvz_calibration_row_bg.xml
app/src/main/res/layout/: activity_main.xml  (+20 more)
docs/: normal-programming-guide.md  pvz2-calibration-guide.md  pvz2-calibration-variables.md  release-checklist.md
docs/agents/: domain.md  issue-tracker.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
value/: normal_programming_guide.md  pvz2_boss.lua  pvz2_calibration_variables.md  pvz2_保龄球 后期.lua  pvz2_前期.lua  pvz2_第一关.lua  pvz2_第三关.lua  pvz2_第二关.lua  pvz2_葫芦 后期.lua
(+179 files in other folders)
